# Image-Guided-Robotic-Transcranial-Magnetic-Stimulation

./: README.md
ros_workspace/src/camera_to_robot_space/: CMakeLists.txt  package.xml
ros_workspace/src/camera_to_robot_space/src/: camera_to_robot_space.py  offset.py
ros_workspace/src/evaluation/: CMakeLists.txt  package.xml
ros_workspace/src/evaluation/src/: evaluate_tracking.py  live_plot.py
ros_workspace/src/hand_eye_calibration/: CMakeLists.txt  package.xml
ros_workspace/src/hand_eye_calibration/launch/: hand_eye_auto_requirements.launch
ros_workspace/src/hand_eye_calibration/src/: calib.txt  handEye_PlanB.py  hand_eye_calibration.py  hand_eye_calibration_auto.py  poseEstimation.py  solve_handEyeCalibration.py
ros_workspace/src/rt_msgs/: CMakeLists.txt  package.xml
ros_workspace/src/rt_msgs/msg/: TransformRTStamped.msg  TransformRTStampedWithHeader.msg
ros_workspace/src/save_ros_image_msg/: CMakeLists.txt  package.xml
ros_workspace/src/save_ros_image_msg/src/: save_ros_image_ir.py  save_ros_image_msg.py  (+1 more)
ros_workspace/src/tracking/: CMakeLists.txt  notes  notes-for-Evaluation.txt  package.xml
ros_workspace/src/tracking/launch/: tracking.launch
ros_workspace/src/tracking/scripts/: debug_tracking_icp.py  debug_tracking_receive.py  debug_tracking_send.py  get_head_model.py  head_model_generator.py
ros_workspace/src/tracking/src/: ICP  convert.py  tracking_server.py  tracking_server_absolute.py
ros_workspace/src/ur_modern_driver/: CMakeLists.txt  head_mimick.py  package.xml  read_pred_controller_data.py
scripts/: calibrate_camera_both.py
(+14 files in other folders)
