<?xml version="1.0"?>
<package>
  <name>rt_msgs</name>
  <version>0.1.0</version>
  <description>The rt_msgs package</description>

  <maintainer email="omer.rajput@tuhh.de">Omer Rajput</maintainer>


  <license>GPLv3</license>


  <author >omer.rajput@tuhh.de</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
